--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Mechanical Keyboard</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-<title>Mechanical Keyboard</title>
 <div id="title">
     <div id="t1">THE ANATOMY OF A CUSTOM</div>
     <div id="t2">MECHANICAL KEYBOARD</div>
